<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.14">
  <POU Name="F_CarbideShutterEnable" Id="{6b2b070e-0295-4d27-a821-90f06b1926e9}" SpecialFunc="None">
    <Declaration><![CDATA[// Interlock logic for the Carbide Shutter
FUNCTION F_CarbideShutterEnable : BOOL
VAR_INPUT
END_VAR
VAR_IN_OUT CONSTANT
	stErrors : ST_ErrorStates; // Currently detected errors
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[F_CarbideShutterEnable := FALSE;

// Close carbide shutter if there is a hardware failure
IF stErrors.bHardwareFailure THEN
	RETURN;
END_IF

// Close carbide shutter if leak in OPCPA with carbide on or if there is a leak under the table
IF stErrors.bLeakOpcpaCarbideOn OR stErrors.bLeakUnderTable THEN
	RETURN;
END_IF

F_CarbideShutterEnable := TRUE;
]]></ST>
    </Implementation>
    <LineIds Name="F_CarbideShutterEnable">
      <LineId Id="12" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="30" Count="2" />
      <LineId Id="29" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="13" Count="5" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>